			   XPCE ChangeLog
			   ==============

* FIXED: `text_item ->value_font' fails to update font in some rare
  situations.

* MODIFIED: object-term of window and it subclasses now provide one
  argument: the <-name of the window.  Used to be inconsistent and
  often refering to failing methods, making object/2 fail on window
  instances.  Shouldn't break any code.

* ADDED: `class<-no_created' and `class<-no_freed': extra boolean
  argument to add the counts of their subclasses.  Used by PceEmacs
  Prolog colouring to display the correct number of fragments again.

* MODIFIED: moved image greying from library(toolbar) to new
  library(imageops), which is included from library(toolbar).

* ADDED: `tree->event' to call new method `node->event' to allow for
  refinement of node event-processing.

* ADDED: `dialog<->border' to allow setting the border independent from the
  <->gap.

* FIXED: `term-names' of text_item to use <-value rather then <-selection
  to avoid resetting <-modified (and other side-effects).

* FIXED: Lock up on `point<-distance' if points are very far apart.  Now
  use floating point arithmetic.

* ADDED: Dedicated support for JPEG loading on static-color visuals in
  the X11 version, more than triples the speed on non colour-mapped
  displays.


VERSION 6.0.5, distributed with SWI-Prolog 5.0.5
================================================

* ADDED: `editor->show_caret'.  If the caret it invisible, the up/down
  arrow-keys scroll the editor.

* ADDED: Provide support for exchanging atoms and strings holding 0-bytes
  between Prolog and XPCE, facilitating better handling of binary objects.

* ADDED: `window<->buffered_update': switch on/off double buffering on
  window-basis.

* ENHANCED: wheel-mouse events on a window are routed to the vertical
  scrollbar if one is attached.

* ADDED: `graphical<->solid' for more advanced definition of own repaint.

* FIXED: `graphical->draw_image: argument-order and made transparent